httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: us-central1-docker.pkg.dev/sanbox-credit/fromjenkins/testapp:v15
        ports:
        - containerPort: 3000
