httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  annotations: 
    cloud.google.com/neg: '{"ingress": true}' 
spec:
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: api
