hello-world.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  annotations: 
    cloud.google.com/neg: '{"ingress": true}' 
spec:
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: api

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-world
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/redirect-to-https: "true"
spec:
  rules:
  - host: kube.shebatotal.com
    http:
      paths:
      - pathType: Prefix
        - path: /
          backend:
            service:
              name: hello-world-service
              port:
                number: 80
