ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-world
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/redirect-to-https: "true"
spec:
  rules:
  - host: kube.shebatotal.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hello-world-service
            port:
              number: 3000
